--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <servlet>
         <servlet-name>SetAnnouncementServlet</servlet-name>
-        <servlet-class>com.google.devrel.training.conference.servlet.SetAnnouncementServlet</servlet-class>
+        <servlet-class>main.java.run.sites.servlet.SetAnnouncementServlet</servlet-class>
     </servlet>
      <servlet-mapping>
         <servlet-name>SetAnnouncementServlet</servlet-name>
@@ -14,7 +14,7 @@
         <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
         <init-param>
             <param-name>services</param-name>
-            <param-value>com.google.devrel.training.conference.spi.ConferenceApi</param-value>
+            <param-value>main.java.run.sites.spi.ConferenceApi</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
@@ -44,7 +44,7 @@
     
     <servlet>
        <servlet-name>SendConfirmationEmailServlet</servlet-name>
-       <servlet-class>com.google.devrel.training.conference.servlet.SendConfirmationEmailServlet</servlet-class>
+       <servlet-class>main.java.run.sites.servlet.SendConfirmationEmailServlet</servlet-class>
    </servlet>
    <servlet-mapping>
        <servlet-name>SendConfirmationEmailServlet</servlet-name>
