--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,15 @@
         <url-pattern>/_ah/spi/*</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>redirectFilter</filter-name>
+        <filter-class>main.java.run.sites.filter.RedirectFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>redirectFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>crons</web-resource-name>
@@ -66,7 +75,7 @@
     </security-constraint>
 
     <welcome-file-list>
-        <welcome-file>dist/index.html</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
 </web-app>
