--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>objectify</artifactId>
             <version>5.0</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+
 
         <!-- Test Dependencies -->
         <dependency>
