--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "m2-app",
+  "name": "sites-run",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -22,6 +22,7 @@
     "@angular/material": "2.0.0-alpha.9-3",
     "@angular/router": "^3.0.0",
     "core-js": "^2.4.0",
+    "immutable": "^3.8.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.21"
